# scribe

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  test.yml
benches/: buffer_tokens.rs
src/: errors.rs  lib.rs  workspace.rs
src/buffer/: buffer.rs  cursor.rs  distance.rs  gap_buffer.rs  line_range.rs  mod.rs  position.rs  range.rs  tests.rs  type_detection.rs
src/buffer/operation/: delete.rs  group.rs  history.rs  insert.rs  mod.rs  replace.rs
src/buffer/operations/: delete.rs  group.rs  insert.rs  mod.rs
src/buffer/token/: line_iterator.rs  mod.rs  parser.rs  token_iterator.rs  token_set.rs
src/util/: line_iterator.rs  mod.rs
tests/sample/: file2
