[package]

name = "scribe"
version = "0.7.2"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "Text editor toolkit."
homepage = "https://github.com/jmacdonald/scribe"
repository = "https://github.com/jmacdonald/scribe"
documentation = "https://docs.rs/scribe"
readme = "README.md"
license-file = "LICENSE"
keywords = ["gap", "buffer", "text", "editor", "document"]

[dependencies]
syntect = "4.5.0"
luthor = "~0.1.7"
unicode-segmentation = "~1.0.1"
error-chain = "0.10.0"
